--- a/scss/components/_root.scss
+++ b/scss/components/_root.scss
@@ -1,68 +1,167 @@
 /*  Inicio de fuentes externas  */
 @font-face {
-    font-family: 'Fave Condensed One Pro';
-    src: url('../src/assets/fonts/fave-condensed-one-pro/Fave-CondensedOnePro.eot');
-    src: url('../src/assets/fonts/fave-condensed-one-pro/Fave-CondensedOnePro.eot?#iefix') format('embedded-opentype'),
-        url('../src/assets/fonts/fave-condensed-one-pro/Fave-CondensedOnePro.woff2') format('woff2'),
-        url('../src/assets/fonts/fave-condensed-one-pro/Fave-CondensedOnePro.woff') format('woff'),
-        url('../src/assets/fonts/fave-condensed-one-pro/Fave-CondensedOnePro.ttf') format('truetype'),
-        url('../src/assets/fonts/fave-condensed-one-pro/Fave-CondensedOnePro.svg#Fave Condensed One Pro') format('svg');
+    font-family: 'Germania One';
+    src: url('../src/assets/fonts/germania-one/GermaniaOne-Regular.eot');
+    src: url('../src/assets/fonts/germania-one/GermaniaOne-Regular.eot?#iefix') format('embedded-opentype'),
+         url('../src/assets/fonts/germania-one/GermaniaOne-Regular.woff2') format('woff2'),
+         url('../src/assets/fonts/germania-one/GermaniaOne-Regular.woff') format('woff'),
+         url('../src/assets/fonts/germania-one/GermaniaOne-Regular.ttf')  format('truetype'),
+         url('../src/assets/fonts/germania-one/GermaniaOne-Regular.svg#Germania One') format('svg');
 
     font-display: swap;
 }
 
-@font-face {
-    font-family: 'Ombudsman Stencil';
-    src: url('../src/assets/fonts/ombudsman-stencil/OmbudsmanStencil.eot');
-    src: url('../src/assets/fonts/ombudsman-stencil/OmbudsmanStencil.eot?#iefix') format('embedded-opentype'),
-        url('../src/assets/fonts/ombudsman-stencil/OmbudsmanStencil.woff2') format('woff2'),
-        url('../src/assets/fonts/ombudsman-stencil/OmbudsmanStencil.woff') format('woff'),
-        url('../src/assets/fonts/ombudsman-stencil/OmbudsmanStencil.ttf') format('truetype'),
-        url('../src/assets/fonts/ombudsman-stencil/OmbudsmanStencil.svg#Ombudsman Stencil') format('svg');
+/**
+* This is a variable font
+* You can controll variable axes as shown below:
+* font-variation-settings: 'wght' 900.0;
+*
+* available axes:
 
-    font-display: swap;
+* 'wght' (range from 300.0 to 900.0)
+
+*/
+
+@font-face {
+  font-family: 'Satoshi-Variable';
+  src: url('../src/assets/fonts/satoshi/Satoshi-Variable.woff2') format('woff2'),
+       url('../src/assets/fonts/satoshi/Satoshi-Variable.woff') format('woff'),
+       url('../src/assets/fonts/satoshi/Satoshi-Variable.ttf') format('truetype');
+       font-weight: 300 900;
+       font-display: swap;
+       font-style: normal;
 }
 
-@font-face {
-    font-family: 'Roboto Regular';
-    src: url('../src/assets/fonts/roboto/Roboto-Regular.ttf') format('truetype');
 
-    font-display: swap;
+/**
+* This is a variable font
+* You can controll variable axes as shown below:
+* font-variation-settings: 'wght' 900.0;
+*
+* available axes:
+
+* 'wght' (range from 300.0 to 900.0)
+
+*/
+
+@font-face {
+  font-family: 'Satoshi-VariableItalic';
+  src: url('../src/assets/fonts/satoshi/Satoshi-VariableItalic.woff2') format('woff2'),
+       url('../src/assets/fonts/satoshi/Satoshi-VariableItalic.woff') format('woff'),
+       url('../src/assets/fonts/satoshi/Satoshi-VariableItalic.ttf') format('truetype');
+       font-weight: 300 900;
+       font-display: swap;
+       font-style: italic;
 }
 
-@font-face {
-    font-family: 'Roboto Medium';
-    src: url('../src/assets/fonts/roboto/Roboto-Medium.ttf') format('truetype');
 
-    font-display: swap;
+@font-face {
+  font-family: 'Satoshi-Light';
+  src: url('../src/assets/fonts/satoshi/Satoshi-Light.woff2') format('woff2'),
+       url('../src/assets/fonts/satoshi/Satoshi-Light.woff') format('woff'),
+       url('../src/assets/fonts/satoshi/Satoshi-Light.ttf') format('truetype');
+       font-weight: 300;
+       font-display: swap;
+       font-style: normal;
 }
 
-@font-face {
-    font-family: 'Roboto Bold';
-    src: url('../src/assets/fonts/roboto/Roboto-Bold.ttf') format('truetype');
 
-    font-display: swap;
+@font-face {
+  font-family: 'Satoshi-LightItalic';
+  src: url('../src/assets/fonts/satoshi/Satoshi-LightItalic.woff2') format('woff2'),
+       url('../src/assets/fonts/satoshi/Satoshi-LightItalic.woff') format('woff'),
+       url('../src/assets/fonts/satoshi/Satoshi-LightItalic.ttf') format('truetype');
+       font-weight: 300;
+       font-display: swap;
+       font-style: italic;
 }
 
-@font-face {
-    font-family: 'Roboto Light';
-    src: url('../src/assets/fonts/roboto/Roboto-Light.ttf') format('truetype');
 
-    font-display: swap;
+@font-face {
+  font-family: 'Satoshi-Regular';
+  src: url('../src/assets/fonts/satoshi/Satoshi-Regular.woff2') format('woff2'),
+       url('../src/assets/fonts/satoshi/Satoshi-Regular.woff') format('woff'),
+       url('../src/assets/fonts/satoshi/Satoshi-Regular.ttf') format('truetype');
+       font-weight: 400;
+       font-display: swap;
+       font-style: normal;
 }
 
-@font-face {
-    font-family: 'Roboto Condensed Regular';
-    src: url('../src/assets/fonts/roboto/RobotoCondensed-Regular.ttf') format('truetype');
 
-    font-display: swap;
+@font-face {
+  font-family: 'Satoshi-Italic';
+  src: url('../src/assets/fonts/satoshi/Satoshi-Italic.woff2') format('woff2'),
+       url('../src/assets/fonts/satoshi/Satoshi-Italic.woff') format('woff'),
+       url('../src/assets/fonts/satoshi/Satoshi-Italic.ttf') format('truetype');
+       font-weight: 400;
+       font-display: swap;
+       font-style: italic;
 }
 
-@font-face {
-    font-family: 'Roboto Condensed Bold';
-    src: url('../src/assets/fonts/roboto/RobotoCondensed-Bold.ttf') format('truetype');
 
-    font-display: swap;
+@font-face {
+  font-family: 'Satoshi-Medium';
+  src: url('../src/assets/fonts/satoshi/Satoshi-Medium.woff2') format('woff2'),
+       url('../src/assets/fonts/satoshi/Satoshi-Medium.woff') format('woff'),
+       url('../src/assets/fonts/satoshi/Satoshi-Medium.ttf') format('truetype');
+       font-weight: 500;
+       font-display: swap;
+       font-style: normal;
+}
+
+
+@font-face {
+  font-family: 'Satoshi-MediumItalic';
+  src: url('../src/assets/fonts/satoshi/Satoshi-MediumItalic.woff2') format('woff2'),
+       url('../src/assets/fonts/satoshi/Satoshi-MediumItalic.woff') format('woff'),
+       url('../src/assets/fonts/satoshi/Satoshi-MediumItalic.ttf') format('truetype');
+       font-weight: 500;
+       font-display: swap;
+       font-style: italic;
+}
+
+
+@font-face {
+  font-family: 'Satoshi-Bold';
+  src: url('../src/assets/fonts/satoshi/Satoshi-Bold.woff2') format('woff2'),
+       url('../src/assets/fonts/satoshi/Satoshi-Bold.woff') format('woff'),
+       url('../src/assets/fonts/satoshi/Satoshi-Bold.ttf') format('truetype');
+       font-weight: 700;
+       font-display: swap;
+       font-style: normal;
+}
+
+
+@font-face {
+  font-family: 'Satoshi-BoldItalic';
+  src: url('../src/assets/fonts/satoshi/Satoshi-BoldItalic.woff2') format('woff2'),
+       url('../src/assets/fonts/satoshi/Satoshi-BoldItalic.woff') format('woff'),
+       url('../src/assets/fonts/satoshi/Satoshi-BoldItalic.ttf') format('truetype');
+       font-weight: 700;
+       font-display: swap;
+       font-style: italic;
+}
+
+
+@font-face {
+  font-family: 'Satoshi-Black';
+  src: url('../src/assets/fonts/satoshi/Satoshi-Black.woff2') format('woff2'),
+       url('../src/assets/fonts/satoshi/Satoshi-Black.woff') format('woff'),
+       url('../src/assets/fonts/satoshi/Satoshi-Black.ttf') format('truetype');
+       font-weight: 900;
+       font-display: swap;
+       font-style: normal;
+}
+
+
+@font-face {
+  font-family: 'Satoshi-BlackItalic';
+  src: url('../src/assets/fonts/satoshi/Satoshi-BlackItalic.woff2') format('woff2'),
+       url('../src/assets/fonts/satoshi/Satoshi-BlackItalic.woff') format('woff'),
+       url('../src/assets/fonts/satoshi/Satoshi-BlackItalic.ttf') format('truetype');
+       font-weight: 900;
+       font-display: swap;
+       font-style: italic;
 }
 
 /*  Fin de fuentes externas  */
@@ -100,7 +199,7 @@
     /* Fin de Colores */
 
     /*  Fuentes  */
-    --fuente-fave-condensed: Fave Condensed One Pro;
+    --fuente-germania-one: Germania One;
     --fuente-ombudsman-stencil: Ombudsman Stencil;
     --fuente-roboto-regular: Roboto Regular;
     --fuente-roboto-medium: Roboto Medium;
