Se agrego video y ajustos secciones

--- a/css/style.css
+++ b/css/style.css
@@ -1160,8 +1160,7 @@ footer .terminos-y-condiciones .modal-body {
   padding: 10px;
 }
 .holy-souce .holy-souce-section {
-  margin: 56px auto;
-  font-family: var(--font-germania-one);
+  margin: 100px auto;
 }
 .holy-souce .holy-souce-section .holy-souce-section-heading-title p {
   font-family: var(--font-satoshi-regular);
@@ -1259,6 +1258,91 @@ footer .terminos-y-condiciones .modal-body {
 .holy-souce .holy-souce-section .holy-souce-section-product .holy-souce-section-product-description .holy-souce-section-product-button p {
   font-family: var(--font-germania-one);
   color: var(--color-white);
+}
+.holy-souce .holy-souce-section .holy-souce-section-process {
+  width: 80%;
+  margin: auto;
+  display: flex;
+  align-items: center;
+}
+.holy-souce .holy-souce-section .holy-souce-section-process .holy-souce-section-process-background {
+  background-color: var(--color-beige);
+  height: 500px;
+  width: 641px;
+  position: absolute;
+  left: 0;
+  z-index: -1;
+}
+.holy-souce .holy-souce-section .holy-souce-section-process .holy-souce-section-process-image {
+  display: flex;
+  justify-content: start;
+}
+.holy-souce .holy-souce-section .holy-souce-section-process .holy-souce-section-process-image img {
+  width: 25em;
+}
+.holy-souce .holy-souce-section .holy-souce-section-process .holy-souce-section-process-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: auto;
+}
+.holy-souce .holy-souce-section .holy-souce-section-process .holy-souce-section-process-item .holy-souce-section-process-item-title {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 30px;
+  border-bottom: 1px solid var(--color-grey);
+  padding-bottom: 30px;
+  align-items: center;
+}
+.holy-souce .holy-souce-section .holy-souce-section-process .holy-souce-section-process-item .holy-souce-section-process-item-title .item-title-number-text {
+  display: flex;
+  align-items: center;
+}
+.holy-souce .holy-souce-section .holy-souce-section-process .holy-souce-section-process-item .holy-souce-section-process-item-title .item-title-number-text .item-title-number p {
+  font-family: var(--font-satoshi-medium);
+  color: var(--color-grey);
+  font-size: 23px;
+  margin-right: 30px;
+}
+.holy-souce .holy-souce-section .holy-souce-section-process .holy-souce-section-process-item .holy-souce-section-process-item-title .item-title-number-text .item-title-text p {
+  font-family: var(--font-satoshi-medium);
+  color: var(--color-black);
+  font-size: 25px;
+}
+.holy-souce .holy-souce-section .holy-souce-section-process .holy-souce-section-process-item .holy-souce-section-process-item-title .item-title-icon i {
+  color: var(--color-red);
+}
+.holy-souce .holy-souce-section .holy-souce-section-heading-title-video h2 {
+  font-family: var(--font-germania-one);
+  font-size: 50px;
+  line-height: 1;
+  text-align: center;
+}
+.holy-souce .holy-souce-section .holy-souce-section-heading-title-video h2 span {
+  color: var(--color-red);
+}
+.holy-souce .holy-souce-section .holy-souce-section-video {
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+.holy-souce .holy-souce-section .holy-souce-section-all-recipes {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: 1fr;
+  grid-gap: 20px;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  margin: auto;
+}
+.holy-souce .holy-souce-section .holy-souce-section-all-recipes .recipes {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: auto;
+}
+.holy-souce .holy-souce-section .holy-souce-section-all-recipes .recipes .recipes-image img {
+  width: 15em;
 }
 
 /*
