--- a/scss/components/_root.scss
+++ b/scss/components/_root.scss
@@ -153,10 +153,12 @@
     /* Colours */
     --color-white: #ffffff;
     --color-black: #000000;
+    --color-black-202020: #202020;
     --color-black-85: #00000085;
     --color-red: #FD3C3C;
     --color-grey:#ACADAE;
     --color-beige: #F2F0EC;
+    --color-green: #3CC925;
     --color-tranparent: transparent;
     /* End Colours */
 
