--- a/scss/base/_index.scss
+++ b/scss/base/_index.scss
@@ -274,13 +274,18 @@
                 flex-direction: column;
                 justify-content: center;
                 margin: auto;
+                border-bottom: 1px solid var(--color-grey);
+                padding-bottom: 10px;
+
+                #descriptionItem01, #descriptionItem02, #descriptionItem03, #descriptionItem04 {
+                    display: none;
+                }
 
                 .holy-souce-section-process-item-title {
                     display: flex;
                     justify-content: space-between;
                     padding-top: 30px;
-                    border-bottom: 1px solid var(--color-grey);
-                    padding-bottom: 30px;
+                    padding-bottom: 10px;
                     align-items: center;
 
                     .item-title-number-text {
